--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "passport-jwt": "^4.0.1",
     "prisma": "^6.7.0",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "tesseract.js": "^6.0.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
